--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,7 @@ body{
 
 .main-head{
     
-    background-image: url(i);
+    background-image: url();
     background-attachment: fixed ;
     display: flex;
 }
