--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,98 @@ body{
 .main-container{
     display: flex;
     flex-direction: column;
+    font-family: 'Cormorant';
+    
 }
 
-.main-head{
-    
-    background-image: url();
-    background-attachment: fixed ;
+.main-head {  
     display: flex;
+    color: white;
+    position: relative;
+    height: 100vh;
+    
+}
+
+.head-list{
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    justify-content: center;
+    margin: 0 auto;
+}
+
+
+
+.logo p{
+    font-family: 'Caveat';
+    font-size: 56px;
+    margin-top: 5px;
+}
+
+.order{
+    color: white;
+    font-size: 14px;
+    position: absolute;
+    right: 8%;
+    margin-top: 10px;
+    
+}
+
+.order-box{
+    display: flex;
+    background-color: black;
+    width: 220px;
+    height: 30px;
+    padding: 15px;
+}
+
+.order-box a{
+    align-self: center;
+    margin: 0 auto;
+    text-transform: uppercase;
+    color: white;
+    text-decoration: none;
+    
+}
+
+.team{
+    background-color: white;
+    color:black;
+    display: flex;
+    padding: 50px;
+}
+
+.team-text{
+    
+    margin-left: 13%;
+    margin-top: 100px;
+    padding: 20px;
+}
+.team-text h2{
+    font-family: 'Cormorant';
+}
+
+ .team-text i + h2 {
+   margin-top: 100px;
+   font-weight: 100;
+   font-size: 40px;
+   color: rgb(43, 43, 43);
+}
+
+.team-text p{
+    color: rgb(94, 94, 94);
+    width: 500px;
+   font-family: 'sans-serif';
+   font-size: 20px;
+   line-height: 1.5;
+}
+
+.team-photo{
+margin-left: 5%;
+}
+
+.team-photo img{
+    width: 500px;
+    height: 700px;
 }
 
