--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 body{
     margin: 0;
     padding: 0;
-
 }
+
 
 .main-container{
     display: flex;
@@ -10,6 +10,7 @@ body{
     font-family: 'Cormorant';
     
 }
+
 
 .main-head {  
     display: flex;
@@ -60,7 +61,7 @@ body{
     text-decoration: none;
     
 }
-
+/* команда */
 .team{
     background-color: white;
     color:black;
@@ -102,3 +103,84 @@ margin-left: 5%;
     height: 700px;
 }
 
+.menu{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    margin-top: 16px;
+}
+
+.menu-upper{
+    display: flex;
+}
+
+.menu-upper-article-box , .menu-list-box{
+    padding: 60px ;
+    padding-top: 80px;
+    width: 50%;
+    position: relative;
+    height: 150px;
+}
+
+.menu-upper-article-box h2{
+    position: absolute;
+    left: 35%;
+    color: rgb(43, 43, 43);
+    font-weight: 100;
+    font-size: 40px;
+}
+
+.menu-list{
+    list-style-type: none;
+    padding-top: 20px;
+}
+
+.menu-item a{
+    text-decoration: none;
+    font-family: 'sans-serif';
+    font-weight: 100;
+    font-size: 16px;
+    color: rgb(99, 99, 99);
+}
+
+.menu-item a:hover{
+    color: rgb(189, 143, 28);
+}
+
+.menu-bottom{
+    display: flex;
+}
+.menu-bottom-sec-1{
+    
+    display: grid;
+    width: 50%;
+    grid-template-columns:48% 52%;
+    grid-template-rows: 300px 300px;
+    
+}
+
+.menu-bottom-sec-1 img{
+    width: 100% ;
+    height: 100%;
+}
+
+.menu-bottom-sec-1 p{
+grid-column-start: 1;
+grid-column-end: 3;
+
+color: rgb(94, 94, 94);
+font-family: 'sans-serif';
+font-size: 18px;
+line-height: 1.2;
+text-align: center;
+padding: 20px;
+}
+.menu-bottom-sec-2{
+    width: 50%;
+    height: 550px;
+}
+
+.menu-bottom-sec-2 img{
+    height: 100%;
+    width: 100%;
+}
