--- a/css/styles.css
+++ b/css/styles.css
@@ -296,6 +296,10 @@ margin-bottom: 40px;
     
 }
 
+.footer a:hover{
+    color: rgb(189, 143, 28);
+}
+
 .logo_footer{
     font-family: 'Caveat';
     font-size: 25px;
