--- a/css/about.css
+++ b/css/about.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
 }
-
 .main-head{
     height: 100px;
 }
@@ -49,6 +48,10 @@ margin-bottom: 80px;
 
 .footer{
     padding-top: 0;
-    margin-top: 5px;
+    margin-top: 15px;
+  
 }
 
+.logo_footer {
+    margin-top: 0;
+}
