--- a/css/styles.css
+++ b/css/styles.css
@@ -3,45 +3,47 @@ body{
     padding: 0;
 }
 
-
 .main-container{
     display: flex;
     flex-direction: column;
     font-family: 'Cormorant';
-    
 }
 
 
-.main-head {  
-    display: flex;
+.main-head{  
     color: white;
-    position: relative;
     height: 100vh;
-    
 }
 
 .head-list{
-    display: flex;
+    display: grid;
     list-style-type: none;
     padding: 0;
+    height: 100px;
+    grid-template-columns: 33% 33% 33%;
+    align-items: center;
     justify-content: center;
-    margin: 0 auto;
 }
 
-
+.logo{
+    justify-self: center;
+}
 .logo p{
+    grid-column-start: 2;
+    grid-column-end: 3;
     font-family: 'Caveat';
     font-size: 56px;
-    margin-top: 5px;
+    margin-top: 5px; 
+    
+    
 }
 
 .order{
+    grid-column-start: 3;
+    grid-column-end: 4;
     color: white;
-    font-size: 14px;
-    position: absolute;
-    right: 8%;
-    margin-top: 10px;
-    
+    font-size: 14px; 
+    justify-self: center;
 }
 
 .order-box{
@@ -49,7 +51,7 @@ body{
     background-color: black;
     width: 220px;
     height: 30px;
-    padding: 15px;
+    padding: 20px;
 }
 
 .order-box a{
@@ -65,6 +67,7 @@ body{
     background-color: white;
     color:black;
     display: flex;
+    gap: 12%;
     padding: 50px;
 }
 
@@ -72,10 +75,7 @@ body{
     
     margin-left: 13%;
     margin-top: 100px;
-    padding: 20px;
-}
-.team-text h2{
-    font-family: 'c';
+    
 }
 
  .team-text i + h2 {
@@ -91,10 +91,6 @@ body{
    font-family: 'sans-serif';
    font-size: 20px;
    line-height: 1.5;
-}
-
-.team-photo{
-margin-left: 5%;
 }
 
 .team-photo img{
@@ -114,28 +110,27 @@ margin-left: 5%;
 
 .menu-upper{
     display: flex;
-    padding-bottom: 80px;
+    padding-bottom: 40px;
 }
 
 .menu-upper-article-box , .menu-list-box{
-    padding: 60px ;
-    padding-top: 80px;
+    padding: 60px 80px;
+    padding-bottom: 0;
     width: 50%;
-    position: relative;
-    height: 150px;
 }
 
 .menu-upper-article-box h2{
-    position: absolute;
-    left: 35%;
+    
     color: rgb(43, 43, 43);
     font-weight: 100;
     font-size: 40px;
+    margin-left: 20%;
 }
 
 .menu-list{
     list-style-type: none;
-    padding-top: 20px;
+    width: 250px;
+    margin: 0;
 }
 
 .menu-item a{
@@ -175,9 +170,10 @@ grid-column-end: 3;
 color: rgb(94, 94, 94);
 font-family: 'sans-serif';
 font-size: 18px;
-line-height: 1.2;
+line-height: 1.5;
 text-align: center;
 padding: 20px;
+padding-top: 50px;
 }
 .menu-bottom-sec-2{
     width: 50%;
@@ -274,10 +270,12 @@ margin-bottom: 40px;
 /* footer */
 .footer{
     margin-top: 30px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
     background-color: white;
     padding: 15px;
     align-items: center;
+    
 }
 
 .footer ul{
@@ -287,8 +285,11 @@ margin-bottom: 40px;
     margin: 0;
 }
 
+.footer li{
+    margin-left: 20%;
+}
+
 .footer a{
-    margin-left: 100px;
     text-decoration: none;
     font-size: large;
     color: grey;
@@ -303,13 +304,16 @@ margin-bottom: 40px;
     font-family: 'Caveat';
     font-size: 25px;
     padding: 0;
-    margin-left: 28%;
-    margin-bottom: 0;
+    justify-self: center;
+    align-self: center;
+    margin: 0;
+    
 }
 
 .links_container{
     display: flex;
-    margin-left: 35%;
+    margin-left: auto;
+    
 }
 
 .links_container a{
@@ -324,3 +328,4 @@ margin-bottom: 40px;
 a>img:hover {
     transform: scale(1.2);
 }
+
