--- a/css/form.css
+++ b/css/form.css
@@ -1,23 +1,18 @@
 .form-main-container{
-    position: relative;
     display: flex;
     flex-direction: column;
     height: 100vh;
+    min-width: 700px;
 }
 
-.form-main-head {
-    display: flex;
+.logo {
     color: white;
-    position: relative;
-    
 }
 
 .form-box{
-    position: absolute;
-    top: 20%;
     align-self: center;
-    height: 60%;
-    width: 30%;
+    height: 70%;
+    width: 40%;
     background-color: black;
     border-radius: 20px;
     color: white;
@@ -25,8 +20,14 @@
 }
 
 .form-box ul{
+    margin: auto;
+    margin-top: 100px;
+    display: flex;
+    width: 50%;
+    flex-direction: column;
     list-style-type: none;
-    margin: 80px 90px;
+    padding: 0;
+
 }
 
 .form-box li{
@@ -35,7 +36,7 @@
 
 input{
     padding: 15px 26px;
-    width: 76%;
+    width: 100%;
     background-color: black;
     outline: none;
     border: none;
@@ -44,7 +45,7 @@ input{
 }
 
 .last{
-    width: 10px;
+    width: 20px;
 }
 
 input:focus{
@@ -63,4 +64,8 @@ input:focus{
 
 .order-button:active{
 background-color: rgb(78, 78, 78);
+}
+
+.footer{
+    margin-top: auto;
 }
