--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,7 +4,11 @@
         gap: 8%;
     }
  .team-text{
-    margin-left: 3%;
+    padding-left: 3%;
+ }
+
+ .team-text i+h2 {
+   margin-top: 50px;
  }
 
  .contacts-section{
@@ -19,8 +23,137 @@
 
  }
 
+ .column_4{
+   grid-column-start: 1 ;
+   grid-column-end: 3;
+   align-self: flex-end;
+ }
+
  .column_4 h2{
     margin-bottom: 2px;
  }
 
 }
+
+/*  */
+@media (max-width: 1020px){
+   .team {
+        gap: 4%; 
+      }
+   
+   
+   .menu-bottom {
+        flex-direction: column;
+        align-items: center;
+   }
+
+   .menu-bottom-sec-1 {
+      width: 100%;
+   }
+
+   .menu-bottom-sec-2 {
+     display: none;
+   }
+
+   .team-text p {
+          font-size: 18px;
+          line-height: 1.3;
+        
+   }
+
+   /* about */
+
+   .head-list{
+      margin-top: 20px;
+   }
+
+   .about-sec{
+      grid-template-columns: 100%;
+      grid-template-rows: 100vh;
+   }
+
+   .photo-about{
+      justify-self: center;
+   }
+
+   .photo-about:nth-of-type(1){
+      order: 1;
+   }
+   .photo-about:nth-of-type(2) {
+      order: 3;
+   }
+
+   .text:nth-of-type(1){
+      order: 2;
+   }
+   .text:nth-of-type(2){
+      order: 4;
+   }
+
+   .about-sec img {
+         scale: .8;
+
+   }
+
+
+}
+
+/*  */
+@media (max-width: 800px) {
+   
+   .head-list{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }
+
+   .order-box {
+         background-color: rgb(32, 32, 32);
+         transition: 1.2s;
+   }
+   
+   .team {
+         flex-direction: column;
+         gap: 4%;
+         align-items: center;
+   }
+   
+   .team-text {
+      text-align: center;
+      width: 100%;
+      padding: 0;
+   }
+   
+   .team-text i+h2{
+      margin-top: 16px;
+      font-size: 30px;
+   }
+
+
+   .team-text p {
+   font-size: 17px;
+   line-height: 1.2;
+   width: 100%;
+   }
+
+   .team-photo{
+      width: 500px;
+      height: 700px;
+   }
+
+  .contacts-columns {
+     display: grid;
+     gap: 10px;
+     grid-template-columns: 50% 50%;
+     grid-template-rows: 15% 60% 25%;
+     padding: 30px;
+
+  }
+
+  .column_1{
+   grid-column-start: 1;
+   grid-column-end: 3;
+   margin: 0 auto;
+  }
+}
+
