--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,8 @@ body{
     display: flex;
     flex-direction: column;
     font-family: 'Cormorant';
+    min-width: 600px;
 }
-
 
 .main-head{  
     color: white;
@@ -67,14 +67,15 @@ body{
     background-color: white;
     color:black;
     display: flex;
-    gap: 12%;
+    gap: 8%;
     padding: 50px;
+    align-items: center;
 }
 
 .team-text{
+    padding-left: 13%;
+    width: 50%;
     
-    margin-left: 13%;
-    margin-top: 100px;
     
 }
 
@@ -87,15 +88,20 @@ body{
 
 .team-text p{
     color: rgb(94, 94, 94);
-    width: 500px;
+    width: 80%;
    font-family: 'sans-serif';
    font-size: 20px;
    line-height: 1.5;
 }
 
+.team-photo{
+    width: 50%;
+    height: 100%;
+}
+
 .team-photo img{
-    width: 500px;
-    height: 700px;
+    width: 100%;
+    height: 100%;
 }
 
 /* menu */
@@ -110,27 +116,30 @@ body{
 
 .menu-upper{
     display: flex;
-    padding-bottom: 40px;
+    padding: 40px 0;
+    align-items: center;
+    
 }
 
 .menu-upper-article-box , .menu-list-box{
-    padding: 60px 80px;
     padding-bottom: 0;
-    width: 50%;
+     width: 50%; 
+    display: flex;
+    align-items: center;
+   
 }
 
 .menu-upper-article-box h2{
-    
     color: rgb(43, 43, 43);
     font-weight: 100;
     font-size: 40px;
-    margin-left: 20%;
+    margin: 0 auto; 
 }
 
 .menu-list{
     list-style-type: none;
     width: 250px;
-    margin: 0;
+    margin: 0 auto;
 }
 
 .menu-item a{
@@ -149,11 +158,11 @@ body{
     display: flex;
 }
 .menu-bottom-sec-1{
-    
     display: grid;
     width: 50%;
+    height: 100%;
     grid-template-columns:48% 52%;
-    grid-template-rows: 300px 300px;
+    grid-template-rows: 50% 50%;
     
 }
 
@@ -173,11 +182,11 @@ font-size: 18px;
 line-height: 1.5;
 text-align: center;
 padding: 20px;
-padding-top: 50px;
+padding-top: 10%;
 }
 .menu-bottom-sec-2{
     width: 50%;
-    height: 550px;
+
 }
 
 .menu-bottom-sec-2 img{
